--- a/styles/bootly.css
+++ b/styles/bootly.css
@@ -1,8 +1,6 @@
 body{
     overflow: hidden;
-    background: url('../images/bg-flixtor.jpg') no-repeat center center fixed;
-    -webkit-background-size: cover;
-    background-size: cover;
+    background: url('../images/background.png') repeat center center fixed;
     color: #e9e9e9;
 }
 
@@ -12,25 +10,23 @@ a {
 
 #content-wrapper
 {
-    margin-top: 38px;
+    margin-top: 40px;
 }
 
 /* Top bar */
 #top-bar {
-    background-color: #efefef;
+    background-color: #101519;
     height: 40px;
     z-index: 999999;
-    color:#333333;
+    color:#ffffff;
     position:fixed;
     top:0;
     width: 100%;
     -webkit-user-select: none;
     -webkit-app-region: drag;
-    border-bottom:thin solid black;
-
-    -moz-box-shadow: 0 0 20px 5px black;
-    -webkit-box-shadow: 0 0 20px 5px black;
-    box-shadow: 0 0 20px 5px black;
+    -moz-box-shadow: 0 0 10px 5px #101519;
+    -webkit-box-shadow: 0 0 10px 5px #101519;
+    box-shadow: 0 0 20px 5px #101519;
 }
 
 .top-titlebar-text {
@@ -88,9 +84,7 @@ a {
 /* Side bar */
 .side-bar{
     position: fixed;
-    margin-top: 2px;
     height: 100%;
-    border-right: thin solid black;
     padding-top: 10px;
     background: rgba(0, 0, 0, 0.6);
     -webkit-animation: slide 0.5s forwards;
@@ -99,7 +93,7 @@ a {
 #side-bar-full
 {
     width: 150px;
-    left:-150px;s
+    left:-150px;
 }
 
 #side-bar-small
@@ -156,7 +150,6 @@ a {
 #content
 {
     margin-left: 150px;
-    padding-top: 2px;
 }
 
 @media all and (max-width:768px) {
@@ -293,7 +286,6 @@ button:hover
 
 a:hover {
     color: inherit;
-    opacity: 0.7;
 }
 
 .black-input:hover
@@ -371,7 +363,7 @@ a:hover {
 .modal
 {
     overflow-y: hidden;
-    top:50px;
+    top:40px;
 }
 
 small.text-muted {
@@ -384,18 +376,17 @@ small.text-muted {
 
 ::-webkit-scrollbar-track
 {
-    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
-    background-color: #ccc;
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.2);
+    background-color: #1f2831;
 }
 
 ::-webkit-scrollbar
 {
     width: 6px;
-    background-color: #F5F5F5;
 }
 ::-webkit-scrollbar-thumb
 {
-    background-color: #626262;
+    background-color: #333c4b;
 }
 
 div.spinner-overlay {
