--- a/styles/bootly.css
+++ b/styles/bootly.css
@@ -436,3 +436,9 @@ div.spinner-overlay {
     top: 3px;
     right: 5px;
 }
+
+label {
+    display: block;
+    margin-bottom: 0;
+    font-weight: normal;
+}
