--- a/styles/movies.css
+++ b/styles/movies.css
@@ -1,5 +1,10 @@
+.on {
+    color: #ffffff;
+    background: #222d3a;
+}
+
 #movie {
-    padding: 5% 10%;
+    padding: 8% 12% 2% 12%;
 }
 
 #title {
@@ -7,33 +12,43 @@
     text-transform: uppercase;
     font-size: 82px;
     text-align: center;
+    margin-bottom: 35px;
 }
 
 #date {
     float: left;
-    font-family: BrandonTextBold;
-    font-size: 18px;
+    font-family: BrandonTextMedium;
+    font-size: 20px;
 }
 
 #genres {
     float: left;
-    font-size: 18px;
+    font-size: 20px;
     font-family: BrandonTextRegularItalic;
-    color: #b9bbbb;
+    color: #fff;
+}
+#plot {
+    font-size: 18px;
+    font-family: BrandonTextRegular;
 }
 
 #info-bar {
-    border-bottom: 1px solid #7e8184;
-    padding-bottom: 5px;
+    border-bottom: 1px solid #fff;
+    padding-bottom: 30px;
 }
 
 #poster {
     line-height: 1.428571429;
-    border-radius: 4px;
+    border-radius: 5px;
+    border: 1px solid #b9bbbb;
     -webkit-transition: all .2s ease-in-out;
     transition: all .2s ease-in-out;
     display: inline-block;
     max-width: 100%;
     height: auto;
-    box-shadow: 0px 0px 2px 0px #b9bbbb;
+    box-shadow: 0px 0px 40px -15px #b9bbbb;
+}
+
+.center-block {
+    text-shadow: 0px 0px 40px rgba(0, 0, 0, 1), 0px 0px 25px rgba(0, 0, 0, 1), 0px 0px 18px rgba(0, 0, 0, 1), 0px 0px 25px rgba(0, 0, 0, 1);
 }
