Added keyboard support

--- a/styles/general.css
+++ b/styles/general.css
@@ -203,3 +203,8 @@ select {
     color: #ffffff;
     background-color: #374353;
 }
+
+.selected {
+    color: #ffffff;
+    background: #222d3a;
+}
