--- a/styles/movies.css
+++ b/styles/movies.css
@@ -1,8 +1,3 @@
-.on {
-    color: #ffffff;
-    background: #222d3a;
-}
-
 #movie {
     padding: 8% 12% 2% 12%;
 }
@@ -51,4 +46,9 @@
 
 .center-block {
     text-shadow: 0px 0px 40px rgba(0, 0, 0, 1), 0px 0px 25px rgba(0, 0, 0, 1), 0px 0px 18px rgba(0, 0, 0, 1), 0px 0px 25px rgba(0, 0, 0, 1);
+}
+
+.on {
+    box-shadow: none;
+    display: inline;
 }
