--- a/styles/general.css
+++ b/styles/general.css
@@ -214,3 +214,14 @@ select {
     width: 100%;
     height: 40px;
 }
+
+.fanart {
+    position: absolute;
+    top: 90px;
+    color: #e9e9e9;
+    -webkit-background-size: cover;
+    background-size: cover;
+    width: 100%;
+    height: 100%;
+    display: none;
+}
