--- a/styles/movies.css
+++ b/styles/movies.css
@@ -8,6 +8,7 @@
 }
 
 #title {
+    text-shadow: 0px 0px 40px rgba(0, 0, 0, 1), 0px 0px 25px rgba(0, 0, 0, 1), 0px 0px 18px rgba(0, 0, 0, 1), 0px 0px 25px rgba(0, 0, 0, 1);
     font-family: BrandonTextLight;
     text-transform: uppercase;
     font-size: 82px;
@@ -28,11 +29,28 @@
     color: #fff;
 }
 #plot {
+    text-shadow: 0px 0px 40px rgba(0, 0, 0, 1), 0px 0px 25px rgba(0, 0, 0, 1), 0px 0px 18px rgba(0, 0, 0, 1), 0px 0px 25px rgba(0, 0, 0, 1);
     font-size: 18px;
     font-family: BrandonTextRegular;
 }
 
+#play {
+    float: left;
+}
+
+#trailer {
+    float: left;
+    margin-left: 25px;
+}
+
+#buy {
+    float: left;
+    margin-left: 25px;
+}
+
+
 #info-bar {
+    text-shadow: 0px 0px 40px rgba(0, 0, 0, 1), 0px 0px 25px rgba(0, 0, 0, 1), 0px 0px 18px rgba(0, 0, 0, 1), 0px 0px 25px rgba(0, 0, 0, 1);
     border-bottom: 1px solid #fff;
     padding-bottom: 30px;
 }
@@ -47,10 +65,6 @@
     max-width: 100%;
     height: auto;
     box-shadow: 0px 0px 40px -15px #b9bbbb;
-}
-
-.center-block {
-    text-shadow: 0px 0px 40px rgba(0, 0, 0, 1), 0px 0px 25px rgba(0, 0, 0, 1), 0px 0px 18px rgba(0, 0, 0, 1), 0px 0px 25px rgba(0, 0, 0, 1);
 }
 
 .on {
